examples/test/testpolicy5636.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5636
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key11: value10
      key1: value29
      key38: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value31
      podSelector:
        matchLabels:
          key40: value39
          key46: value9
          key7: value47
